Revision history for Net-GitHub

0.43    2012.03.30
        - NOTE: We will terminate API v1 and API v2 in 1 month on May 1st, 2012
            (From https://github.com/blog/1090-github-api-moving-on)
        - so V3 is default on now
        - access_token can be created with Net::GitHub::V3::OAuth create_authorization

0.42    2012.03.23
        - Fixed typo in Net::GitHub::V2::NoRepo.pm that crippled App::GitHub (worr)

0.41    2012.03.22
        - still let V2 as default to make ppl using token happy
        - api_throttle work with unauthenticated requests

0.40_04 2011.10.20
        - fix Content-Type check by regex (V3)

0.40_03 2011.10.14
        - Use utf8 => 1 for JSON::Any by default. (jamesronan (James Ronan))
        - if you still want to use V2, pass version => 2

0.40_02 2011.09.29
        - Orgs, Git Data and Gists
        - code cleanup and built on-fly

0.40_01 2011.09.28
        - access_token patch on V2 (c9s)
        - V3 API by default (no backwards with V2, if you still want to stick with V2, pass version => 2)
        - Note: Missing Orgs, Gists, Git Data (will be added in next version soon)

0.30    2011.08.27
        - Default to GET method if we've no data to POST (Lubomir Rintel)
        - repository update (Lubomir Rintel)
        - Slow down with requests if we're approaching the rate limit (Lubomir Rintel)
        - Make it possible to turn API errors into exceptions (Lubomir Rintel)

0.29    2011.05.07
        always_Authorization for private respo

0.28    2011.03.06
        use official GitHub API request instead of screen-scraping for 'comments' issues by spang (Christine Spang)

0.27    2011.02.17
        requires HTTP::Request::Common; (RT 65787 by JQUELIN)

0.26    2011.01.20
        fix Makefile.PL

0.25    2011.01.19
        partial implementation of Pull Request API (doy)

0.24    2011.01.01
        Organizations API (fayland)
        update Auth to 'Basic Auth' (fayland)

0.23    2010.11.04