@@ -5,6 +5,8 @@ Revision history for Net-GitHub
             (From https://github.com/blog/1090-github-api-moving-on)
         - so V3 is default on now
         - access_token can be created with Net::GitHub::V3::OAuth create_authorization
+        - OAuth API
+        - Events API
 
 0.42    2012.03.23
         - Fixed typo in Net::GitHub::V2::NoRepo.pm that crippled App::GitHub (worr)
